fix: overflow in blog-posts

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -1,155 +1,154 @@
 .blog-posts {
-	list-style: none;
-	padding: 0;
+  list-style: none;
+  padding: 0;
 
-	li {
-		margin: 8rem 0;
-	}
-	li:first-of-type {
-		margin-top: 2rem;
-	}
+  li {
+    margin: 8rem 0;
+  }
+  li:first-of-type {
+    margin-top: 2rem;
+  }
 }
 
 .featured-image {
-	max-width: 750px;
-	display: flex;
-	text-align: center;
-	margin: auto;
-	
+  max-width: 750px;
+  width: 100%;
+  display: flex;
+  text-align: center;
+  margin: auto;
 }
 
 .blog-post {
-	.author {
-		padding: 30px 0 0 0;
-		border: 1px solid #eee;
-		margin: 30px 0;
-		font-size: .8em;
+  .author {
+    padding: 30px 0 0 0;
+    border: 1px solid #eee;
+    margin: 30px 0;
+    font-size: 0.8em;
 
-		.square-image {
-			width: 125px;
-			height: 125px;
-			margin-top: 0;
-		}
-		.blurb {
-			text-align: center;
-		}
-	}
+    .square-image {
+      width: 125px;
+      height: 125px;
+      margin-top: 0;
+    }
+    .blurb {
+      text-align: center;
+    }
+  }
 
-	h3 {
-		margin: 0;
-		font-size: 1rem;
-		a {
-			color: var(--color-secondary-medium);
-			text-decoration: none;
-			font-weight: normal;
-			font-size: 1.3em;
-		}
-	}
+  h3 {
+    margin: 0;
+    font-size: 1rem;
+    a {
+      color: var(--color-secondary-medium);
+      text-decoration: none;
+      font-weight: normal;
+      font-size: 1.3em;
+    }
+  }
 
-	h2 {
-		text-align: left;
-	}
+  h2 {
+    text-align: left;
+  }
 
-	.blog-navigation {
-		font-size: 14px;
-		display: flex;
-		justify-content: space-between;
-		width: auto;
-		overflow: hidden;
-		a {
-			display: block;
-			float: left;
-			margin: 1em 0;
-		}
+  .blog-navigation {
+    font-size: 14px;
+    display: flex;
+    justify-content: space-between;
+    width: auto;
+    overflow: hidden;
+    a {
+      display: block;
+      float: left;
+      margin: 1em 0;
+    }
 
-		.next {
-			color: var(--color-secondary-medium);
-			text-align: right;
-		}
-	}
+    .next {
+      color: var(--color-secondary-medium);
+      text-align: right;
+    }
+  }
 
-	.post-details {
-		border-bottom: 1px solid var(--brand-color-secondary);
-		font-size: .9em;
-		justify-content: space-between;
-		width:100%;
-		display: flex;
-		padding-bottom: .5rem;
-		.blog-filters {
-			display: flex;
-			justify-self:  flex-start;
-			gap: 1rem;
-			.blog-filter {
-				display: flex;
-				justify-self:  flex-start;
+  .post-details {
+    border-bottom: 1px solid var(--brand-color-secondary);
+    font-size: 0.9em;
+    justify-content: space-between;
+    width: 100%;
+    display: flex;
+    padding-bottom: 0.5rem;
+    .blog-filters {
+      display: flex;
+      justify-self: flex-start;
+      gap: 1rem;
+      .blog-filter {
+        display: flex;
+        justify-self: flex-start;
 
-				a {
-					top: -5px;
-				}
-			}
-		}
-		a {
-			text-decoration: none;
-		}
+        a {
+          top: -5px;
+        }
+      }
+    }
+    a {
+      text-decoration: none;
+    }
 
-		.post-date {
-			display: flex;
-			justify-self:flex-end;
-			align-self: flex-end;
-			
-		}
-		.post-author {
-			align-self: flex-end
-		}
-	}
+    .post-date {
+      display: flex;
+      justify-self: flex-end;
+      align-self: flex-end;
+    }
+    .post-author {
+      align-self: flex-end;
+    }
+  }
 
-	.post-content {
-		.button {
-			margin: 30px 0 0 0;
-		}
-	}
+  .post-content {
+    .button {
+      margin: 30px 0 0 0;
+    }
+  }
 }
 .callout {
-	border: 1px dashed var(--color-primary-extra-dark);
-	padding: 1rem;
-	margin-bottom: 1rem;
+  border: 1px dashed var(--color-primary-extra-dark);
+  padding: 1rem;
+  margin-bottom: 1rem;
 }
 .pagination {
-	text-align: center;
-	.page_number {
-		color: var(--color-primary-qtext);
-		margin: 0rem 2rem;
-	}
+  text-align: center;
+  .page_number {
+    color: var(--color-primary-qtext);
+    margin: 0rem 2rem;
+  }
 }
 
 .blog-filter {
-	text-align: center;
-	a {
-		background: var(--brand-color-secondary);
+  text-align: center;
+  a {
+    background: var(--brand-color-secondary);
     padding: 3px 5px;
-    font-size: .8em;
+    font-size: 0.8em;
     border-radius: 5px;
     color: var(--color-white);
-		transition: .2s ease-in-out;
+    transition: 0.2s ease-in-out;
 
-		&:hover {
-			text-decoration: none;
-			background: #00d3a9;
-			color: white !important;
-		}
-	}
+    &:hover {
+      text-decoration: none;
+      background: #00d3a9;
+      color: white !important;
+    }
+  }
 }
 
 .blog-filter.cross a {
-	padding-right: 8px;
+  padding-right: 8px;
 
-	&:after {
-		content: "x";
-		font-size: .5em;
-		position: relative;
-		bottom: 4px;
-		right: -3px;
-	}
+  &:after {
+    content: "x";
+    font-size: 0.5em;
+    position: relative;
+    bottom: 4px;
+    right: -3px;
+  }
 }
 
 .code-block {
